package mib;

import java.io.Serializable;

public enum AccessType implements Serializable {
    NO_ACCESS,
    READ_ONLY,
    READ_WRITE
}
